============
Five Changes
============

Five 1.5.1 (unreleased)
=====================

* Fixed #2168: Missing import

Five 1.5 (2006-08-13)
=====================

* Enabled the viewlet related directives by default.

* Added acquisition wrappers to viewlets before updating or rendering.

* Allow multiple uses of the <class>/<content> directive.

* Moved the custom 'provider:' tales expression back into Five.  Made the
  provider directive acquisition wrap the resultant content provider so that
  simple providers that need security declarations (e.g. those that render
  pagetemplates) can work with the Zope 2 security machinery.

* Added Five.browser.pagetemplatefile.ViewPageTemplateFile as an alias
  to ZopeTwoPageTemplateFile and as a Zope 2 correspondence to
  zope.app.pagetemplate.ViewPageTemplateFile.
  
* Added tests to make sure that views are not blocked by acquired attributes.

* Changed the tests to reflect that defaultView no only works for views
  (and not on attributes).

* The FiveSiteManager classes now work again, but are deprecated for the
  new zope.component support. There is also a method to migrate Five.site
  to zope.component.

Five 1.5c (2006-05-29)
======================

Restructuring
-------------

* Zope 2.10+ now includes site.zcml as part of its instance creation
  skel directory.  As a consequence Five now requires this file to exist
  in every instance.  If upgrading a site from Zope 2.9 to 2.10, you will
  need to copy site.zcml and package-includes/ from your installed Zope
  installation location (skel/etc/) into the etc/ directory of your upgraded
  instance.

  The rationale for requiring this new file is to bring Zope 2 instances
  closer in consistency to Zope 3 instances.  It also eases use of Zope 3
  coding techniques in Zope 2 and removes some confusion when trying
  to run pure Zope 3 applications on Zope 2.

* Zope 2.10+ uses the Zope 3 PageTemplate engine (incl. TAL and